# Agents_Examples

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
articles/: 00-index.md
articles/01-foundation/: article.md
articles/01-foundation/code/: .env.example  README.md  pyproject.toml
articles/01-foundation/code/src/data_agent/: app.py  team.py
articles/02-rag-knowledge-base/: article.md
articles/02-rag-knowledge-base/code/: .gitignore  README.md  pyproject.toml  requirements.txt
articles/02-rag-knowledge-base/code/data/raw/: sales_2024.csv
articles/02-rag-knowledge-base/code/knowledge/: data_engineering_principles.md
articles/02-rag-knowledge-base/code/src/data_agent/: app.py  config.py  context.py  ingest.py  team.py
articles/02-rag-knowledge-base/code/src/data_agent/tools/: filesystem.py  knowledge.py
articles/03-mcp-extending-with-tools/: article.md
articles/03-mcp-extending-with-tools/code/: README.md  pyproject.toml  requirements.txt
articles/03-mcp-extending-with-tools/code/src/data_agent/: app.py  schemas.py  team.py
articles/04-cli-and-developer-experience/: article.md
articles/04-cli-and-developer-experience/code/: README.md  pyproject.toml
articles/04-cli-and-developer-experience/code/src/data_agent/: app.py
articles/04-cli-and-developer-experience/code/src/data_agent/tools/: _paths.py
articles/05-guardrails-and-safety/: article.md
articles/05-guardrails-and-safety/code/: .env.example  README.md  pyproject.toml
articles/05-guardrails-and-safety/code/src/data_agent/: app.py  rag.py
articles/05-guardrails-and-safety/code/src/data_agent/tools/: data.py  filesystem.py
articles/06-resilience-and-observability/: article.md
articles/06-resilience-and-observability/code/: .env.example  README.md  pyproject.toml  requirements.txt
articles/06-resilience-and-observability/code/src/data_agent/: __init__.py  app.py  observability.py  rag.py  resilience.py  safety.py
articles/06-resilience-and-observability/code/src/data_agent/tools/: __init__.py
articles/07-evals-tests-and-ci/: article.md
articles/07-evals-tests-and-ci/code/: .gitignore  README.md  pyproject.toml
articles/07-evals-tests-and-ci/code/.github/workflows/: ci.yml
articles/07-evals-tests-and-ci/code/evals/: __init__.py  evalset.py  run.py
articles/07-evals-tests-and-ci/code/knowledge/: company_data_dictionary.md
articles/07-evals-tests-and-ci/code/mcp_servers/: reference_server.py
articles/07-evals-tests-and-ci/code/src/data_agent/: app.py  config.py  context.py  guardrails.py  rag.py  team.py
articles/07-evals-tests-and-ci/code/tests/: test_context.py  test_mcp_server.py  test_paths.py  test_rag_chunking.py  test_safety.py
scripts/: generate_covers.py
src/data_agent/: app.py  config.py  team.py
src/data_agent/tools/: __init__.py
