[project]
name = "data-agent"
version = "0.1.0"
description = "A teaching example: a multi-agent data-pipeline assistant on the OpenAI Agents SDK (Article 6: Resilience & Observability)."
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.15",
    "mcp>=1.2",
    "chromadb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "tabulate>=0.9",
    "streamlit>=1.40",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
# After `pip install -e .` you can launch the REPL with just `data-agent`.
data-agent = "data_agent.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
